--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+* {
+    scrollbar-color: #181818 transparent;
+    scrollbar-width: thin;
+
+    
+    &::-webkit-scrollbar:hover {
+        background-color: #181818;
+    }
+    &::-webkit-scrollbar {
+        width: 15px;
+        background-color: transparent;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        border-radius: 50rem;
+        background-color: transparent;
+    }
+}
